[tool.poetry]
name = "nhs-vaccination-checker"
version = "0.1.1"
description = ""
license = "MIT"
authors = ["GOATS2K <jp@glattetre.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
click = "^8.0.1"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = "^21.6b0"
rope = "^0.19.0"

[tool.poetry.scripts]
nhs-vaccination-checker = "nhs_vaccination_checker.commands:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


